Basic Menu, sliders, layout are all set

--- a/gulp/scss/fontawesome5/fontawesome.scss
+++ b/gulp/scss/fontawesome5/fontawesome.scss
@@ -16,7 +16,7 @@
 @import 'screen-reader';
 
 // @import 'light';
-// @import 'regular';
+@import 'regular';
 // @import 'solid';
 // @import 'duotone';
 @import 'brands';
