--- a/gulp/scss/powderkeg/01_utilities/_pk-bootstrap-overrides.scss
+++ b/gulp/scss/powderkeg/01_utilities/_pk-bootstrap-overrides.scss
@@ -1,64 +1,106 @@
-// Override Bootstrap variables
-$gray-100: #fcfbfe;
-$gray-150: #E5E5E5;
-$gray-200: #CCCCCC;
-$gray-400: #DDDDDD;
-$gray-500: #808080; 
-$gray-700: #202020;
-$gray-900: #111111;
-$white: #fff;
-$black: #000;
+// Lux 4.5.3
+// Bootswatch
 
-$purple: #1d1135;
-$purple: #7649fe;
-$blue: #0c164f;
-$blue: #5643fd;
-$pink: #ba1e68;
-$orange: #f37f44;
+//
+// Color system
+//
 
-$error: #FF0000;
+$white:    #fff !default;
+$gray-100: #f8f9fa !default;
+$gray-200: #f7f7f9 !default;
+$gray-300: #eceeef !default;
+$gray-400: #ced4da !default;
+$gray-500: #adb5bd !default;
+$gray-600: #919aa1 !default;
+$gray-700: #55595c !default;
+$gray-800: #343a40 !default;
+$gray-900: #1a1a1a !default;
+$black:    #000 !default;
 
-$facebook: #1877f2;
-$twitter: #1da1f2;
-$linkedin: #007bb5;
-$youtube: #FF0000;
+$blue:    #007bff !default;
+$indigo:  #6610f2 !default;
+$purple:  #6f42c1 !default;
+$pink:    #e83e8c !default;
+$red:     #d9534f !default;
+$orange:  #fd7e14 !default;
+$yellow:  #f0ad4e !default;
+$green:   #4bbf73 !default;
+$teal:    #20c997 !default;
+$cyan:    #1f9bcf !default;
 
-$primary: $blue;
-$secondary: $blue;
-$dark: $gray-700;
+$primary:       $gray-900 !default;
+$secondary:     $white !default;
+$success:       $green !default;
+$info:          $cyan !default;
+$warning:       $yellow !default;
+$danger:        $red !default;
+$light:         $white !default;
+$dark:          $gray-800 !default;
 
-$body-color: $gray-900;
-$text-color: $white;
+$yiq-contrasted-threshold:  185 !default;
 
-$border-color: $gray-150;
+// Options
 
-// Override the modal background color
-$modal-backdrop-bg: $primary;
-$modal-backdrop-opacity: 0.8;
+$enable-rounded:            false !default;
 
-// // This adds the crossfade effects to the bootstrap carousel without needing to 
-// .carousel-fade .carousel-item {
-//     opacity: 0;
-//     transition-duration: .6s;
-//     transition-property: opacity;
-// }
+// Body
 
-// .carousel-fade  .carousel-item.active,
-// .carousel-fade  .carousel-item-next.carousel-item-left,
-// .carousel-fade  .carousel-item-prev.carousel-item-right {
-//     opacity: 1;
-// }
+$body-color:                $gray-700 !default;
 
-// .carousel-fade .active.carousel-item-left,
-// .carousel-fade  .active.carousel-item-right {
-//     opacity: 0;
-// }
+// Fonts
 
-// .carousel-fade  .carousel-item-next,
-// .carousel-fade .carousel-item-prev,
-// .carousel-fade .carousel-item.active,
-// .carousel-fade .active.carousel-item-left,
-// .carousel-fade  .active.carousel-item-prev {
-//     transform: translateX(0);
-//     transform: translate3d(0, 0, 0);
-// }
+// stylelint-disable-next-line value-keyword-case
+$font-family-sans-serif:      "Nunito Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$font-size-base:              .875rem !default;
+$h1-font-size:                2rem !default;
+$h2-font-size:                1.75rem !default;
+$h3-font-size:                1.5rem !default;
+$h4-font-size:                1.25rem !default;
+$h5-font-size:                1rem !default;
+$h6-font-size:                .75rem !default;
+$headings-font-weight:        600 !default;
+$headings-color:              $gray-900 !default;
+
+// Tables
+
+$table-border-color:          rgba(0, 0, 0, .05) !default;
+
+// Buttons + Forms
+
+$input-btn-border-width:      0 !default;
+
+// Buttons
+
+$btn-line-height:             1.5rem !default;
+$input-btn-padding-y:         .75rem !default;
+$input-btn-padding-x:         1.5rem !default;
+$input-btn-padding-y-sm:      .5rem !default;
+$input-btn-padding-x-sm:      1rem !default;
+$input-btn-padding-y-lg:      2rem !default;
+$input-btn-padding-x-lg:      2rem !default;
+$btn-font-weight:             600 !default;
+
+// Forms
+
+$input-line-height:                     1.5 !default;
+$input-bg:                              $gray-200 !default;
+$input-disabled-bg:                     $gray-300 !default;
+$input-group-addon-bg:                  $gray-300 !default;
+
+// Navbar
+
+$navbar-padding-y:                  1.5rem !default;
+$navbar-dark-hover-color:           $white !default;
+$navbar-light-color:                rgba($black, .3) !default;
+$navbar-light-hover-color:          $gray-900 !default;
+$navbar-light-active-color:         $gray-900 !default;
+
+// Pagination
+
+$pagination-border-color:           transparent !default;
+$pagination-hover-border-color:     $pagination-border-color !default;
+$pagination-disabled-border-color:  $pagination-border-color !default;
+
+// Breadcrumbs
+
+$breadcrumb-bg:                     transparent !default;
