--- a/gulp/scss/powderkeg/01_utilities/_helpers.scss
+++ b/gulp/scss/powderkeg/01_utilities/_helpers.scss
@@ -2,8 +2,8 @@
 .txt-antialiased { -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale; font-smoothing:antialiased; }
 .txt-noselect { @include user-select(none); cursor:default; } 
 
-.txt-white { color: $white !important; }
-.white-back { background-color: $white; }
+.txt-white { color: white !important; }
+.white-back { background-color: white; }
 
 .setup-background { background-position: center center; background-size: cover; background-repeat: no-repeat; }
 .contain-background { background-position: center center; background-size: contain; background-repeat: no-repeat; }
@@ -16,9 +16,7 @@
 //FONT FAMILY CLASSES
 .fontawesome { font-family: $font-awesome; }
 
-.font-audiowide { font-family: $audiowide; }
-
-.todo { box-shadow: 0 0 25px 0px rgba($pink, 0.7); }
+//.todo { box-shadow: 0 0 25px 0px rgba($pink, 0.7); }
 
 .ellipsis {
     text-overflow: ellipsis;
