--- a/gulp/scss/powderkeg/01_utilities/_pk-variables.scss
+++ b/gulp/scss/powderkeg/01_utilities/_pk-variables.scss
@@ -5,38 +5,38 @@ $mobile-navbar-width:256px;
 $img-path: '../images/';
 
 // Setup some breakpoint variables
-$screen-xs-sm: 550px;
-$screen-xs-min: map-get($grid-breakpoints, xs);
-$screen-sm-min: map-get($grid-breakpoints, sm);
-$screen-md-min: map-get($grid-breakpoints, md);
-$screen-lg-min: map-get($grid-breakpoints, lg);
-$screen-xl-min: map-get($grid-breakpoints, xl);
+// $screen-xs-sm: 550px;
+// $screen-xs-min: map-get($grid-breakpoints, xs);
+// $screen-sm-min: map-get($grid-breakpoints, sm);
+// $screen-md-min: map-get($grid-breakpoints, md);
+// $screen-lg-min: map-get($grid-breakpoints, lg);
+// $screen-xl-min: map-get($grid-breakpoints, xl);
 
-$screen-xs-max: ($screen-sm-min - 1) !default;
-$screen-sm-max: ($screen-md-min - 1) !default;
-$screen-md-max: ($screen-lg-min - 1) !default;
-$screen-lg-max: ($screen-xl-min - 1) !default;
+// $screen-xs-max: ($screen-sm-min - 1) !default;
+// $screen-sm-max: ($screen-md-min - 1) !default;
+// $screen-md-max: ($screen-lg-min - 1) !default;
+// $screen-lg-max: ($screen-xl-min - 1) !default;
 
 // colors
-$gray-100: #fcfbfe;
-$gray-150: #E5E5E5;
-$gray-200: #CCCCCC;
-$gray-400: #DDDDDD;
-$gray-500: #808080; 
-$gray-700: #202020;
-$gray-900: #111111;
-$white: #fff;
-$black: #000;
+// $gray-100: #fcfbfe;
+// $gray-150: #E5E5E5;
+// $gray-200: #CCCCCC;
+// $gray-400: #DDDDDD;
+// $gray-500: #808080; 
+// $gray-700: #202020;
+// $gray-900: #111111;
+// $white: #fff;
+// $black: #000;
 
 
-// fonts
-$opensans: "Open Sans", sans-serif;
-$ubuntu: 'Ubuntu', sans-serif;
-$audiowide: 'Audiowide', sans-serif;
+// // fonts
+// $opensans: "Open Sans", sans-serif;
+// $ubuntu: 'Ubuntu', sans-serif;
+// $audiowide: 'Audiowide', sans-serif;
 $font-awesome: "Font Awesome 5 Pro",'FontAwesome';
 
-$body-font: $opensans;
-$header-font: $ubuntu;
+// $body-font: $opensans;
+// $header-font: $ubuntu;
 
 // Used by font-size() mixin
 $root-font-size: 10px;
@@ -46,8 +46,8 @@ $light: 300;
 $bold: 700;
 
 //font - links
-$anchor-color: $primary;
-$anchor-hover: $purple;
-$anchor-visited: $anchor-color;
+// $anchor-color: $primary;
+// $anchor-hover: $purple;
+// $anchor-visited: $anchor-color;
 
 $menu-toggle-width: 1080px;
