Created a custom player which can be minimized to the bottom right of screen

--- a/gulp/scss/styles.scss
+++ b/gulp/scss/styles.scss
@@ -71,6 +71,7 @@
 @import "./powderkeg/03_parts/cards";
 @import "./powderkeg/03_parts/lity";
 @import "./powderkeg/03_parts/tinyslider";
+@import "./powderkeg/03_parts/yt-player";
 /*@import "./powderkeg/03_parts/media";*/
 
 
