--- a/gulp/scss/powderkeg/01_utilities/_helpers.scss
+++ b/gulp/scss/powderkeg/01_utilities/_helpers.scss
@@ -28,7 +28,7 @@
 }
 
 // A wrapper for video iframes to force 19:9 ratio
-.pk-video { 
+.yt-video-wrapper { 
     position: relative; 
     padding-bottom: 56.25%; /* 16:9 */ 
     padding-top: 25px;
