Added a listing of Genes / Taxonomies and setup the taxonomy template

--- a/wp-content/themes/narrative/styles/dev.css
+++ b/wp-content/themes/narrative/styles/dev.css
@@ -2557,6 +2557,7 @@ readers do not read off random characters that represent icons */
   border: 0;
   background-color: transparent; }
   .card.video:hover {
+    background-color: rgba(0, 0, 0, 0.1);
     text-decoration: none; }
   .card.video .card-body {
     padding: 10px; }
