--- a/gulp/scss/styles.scss
+++ b/gulp/scss/styles.scss
@@ -70,8 +70,10 @@
 @import "./powderkeg/03_parts/footer";
 @import "./powderkeg/03_parts/cards";
 @import "./powderkeg/03_parts/lity";
+@import "./powderkeg/03_parts/channel";
 @import "./powderkeg/03_parts/tinyslider";
 @import "./powderkeg/03_parts/yt-player";
+@import "./powderkeg/03_parts/genres";
 /*@import "./powderkeg/03_parts/media";*/
 
 
