Remove Bootswatch, and Tinyslider Refactor
Removed Bootswatch and TinySlider. Changed channel style. Updated Video card, added SVG play button.

--- a/gulp/scss/powderkeg/01_utilities/_mixin.scss
+++ b/gulp/scss/powderkeg/01_utilities/_mixin.scss
@@ -56,3 +56,10 @@
 	margin-top: -($fontsize / 2); 
 	z-index:1;
 }
+
+@mixin center(){
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
