--- a/gulp/scss/powderkeg/02_elements/_typography.scss
+++ b/gulp/scss/powderkeg/02_elements/_typography.scss
@@ -1,3 +1,13 @@
+body,
+html {
+	font-family: $opensans;
+
+	p, ul {
+		font-family: $opensans;
+	}
+}
+
+
 // h1,h2,h3,h4,h5,h6,
 // .h1,.h2,.h3,.h4,.h5,.h6 {
 // 	color: $white;
