--- a/gulp/scss/powderkeg/03_parts/_cards.scss
+++ b/gulp/scss/powderkeg/03_parts/_cards.scss
@@ -20,13 +20,19 @@
 .card.video {
 	border: 0;
 	background-color: transparent;
+	display: block;
 	transition: background-color 0.1s;
 	width: 320px;
 	
 
 	&:hover {
-		background-color: rgba(0,0,0,0.1);
 		text-decoration: none;
+
+		.card-img-back {
+			svg {
+				opacity: 1;
+			}
+		}
 	}
 
 	.card-img, 
@@ -37,22 +43,51 @@
 
 	.card-img-back {
 		background-color: $gray-300;
+		position: relative;
 		width: 320px;
 		height: 180px;
-		
+
 		img {
 			position: absolute;
 			top: 0;
 			left: 0;
 		}
+
+		svg {
+			border-radius: 50%;
+			opacity: 0;
+			box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.25);
+			transition: opacity 0.1s linear;
+			width: 74px;
+			@include center();
+
+			path {
+				fill: $white;
+
+				&.fa-primary {
+					fill: $gray-800;
+				}
+			}
+		}
+
 	}
 
 	.card-body {
 		//border: 1px solid $gray-300;
+		height: 103px;
 		padding: 10px;
+		position: relative;
+		color: $gray-700;
+
+		p {
+			font-weight: bold;
+		}
 
 		span {
-
+			position: absolute;
+			bottom: 10px;
+			left: 10px;
+			font-size: 14px;
 		}
 	}
 }
