--- a/gulp/scss/powderkeg/03_parts/_channel.scss
+++ b/gulp/scss/powderkeg/03_parts/_channel.scss
@@ -4,19 +4,35 @@
 
  #channels {
 	.channel {
-		// border-bottom: 1px solid $gray-700;
-		padding-bottom: 50px;
-		margin-bottom: 50px;
+		border-bottom: 1px solid $gray-200;
+		padding-bottom: 30px;
+		margin-bottom: 30px;
+
+		// .title-card {
+		// 	margin-bottom: 20px;
+		// 	text-align: center;
+
+		// 	img {
+		// 		border-radius: 50%;
+		// 		margin-bottom: 20px;
+		// 		width: 88px;
+		// 		height: 88px;
+		// 	}
+		// }
 
 		.title-card {
 			margin-bottom: 20px;
-			text-align: center;
+			display: flex;
+			align-items: center;
 
 			img {
 				border-radius: 50%;
-				margin-bottom: 20px;
-				width: 88px;
-				height: 88px;
+				width: 44px;
+				height: 44px;
+			}
+
+			h4 {
+				margin: 0 10px 0 20px;
 			}
 		}
 
@@ -39,21 +55,19 @@
 		}
 
 		.channel-control {
-			background: rgba(0,0,0,0.5);
 			display: inline-block;
 			padding: 10px;
+			margin: 0 10px;
 			z-index: 1;
 			width: 40px;
-			border-radius: 50%;
-			text-align: center;
-			position: absolute;
 			top: 40%;
+			text-align: center;
 	
 			svg {
 				width: 10px;
 	
 				path {
-					fill: white;
+					fill: black;
 				}
 			}
 			
@@ -65,6 +79,34 @@
 				right: 0;
 			}
 		}
+
+		// .channel-control {
+		// 	background: rgba(0,0,0,0.5);
+		// 	display: inline-block;
+		// 	padding: 10px;
+		// 	z-index: 1;
+		// 	width: 40px;
+		// 	border-radius: 50%;
+		// 	text-align: center;
+		// 	position: absolute;
+		// 	top: 40%;
+	
+		// 	svg {
+		// 		width: 10px;
+	
+		// 		path {
+		// 			fill: white;
+		// 		}
+		// 	}
+			
+		// 	&.prev {
+		// 		left: 0;
+		// 	}
+	
+		// 	&.next {
+		// 		right: 0;
+		// 	}
+		// }
 
 	}
 
