--- a/gulp/scss/powderkeg/04_pages/_sitewide.scss
+++ b/gulp/scss/powderkeg/04_pages/_sitewide.scss
@@ -1,3 +1,14 @@
+body {
+	background-color: $white;
+	//color: $text-color;
+	transition: all 0.2s linear;
+
+	&.darkmode {
+		background-color: $gray-900;
+		color: $gray-100;
+	}
+}
+
 .container-fluid {
 	//max-width: 1750px;
 	max-width: 100%;
