--- a/gulp/scss/styles.scss
+++ b/gulp/scss/styles.scss
@@ -84,3 +84,4 @@
 ***************************/
 @import "./powderkeg/04_pages/home";
 @import "./powderkeg/04_pages/sitewide";
+@import "./powderkeg/04_pages/darkmode";
