--- a/gulp/scss/powderkeg/04_pages/_darkmode.scss
+++ b/gulp/scss/powderkeg/04_pages/_darkmode.scss
@@ -2,29 +2,40 @@ body {
 	background-color: $white;
 	//color: $text-color;
 	transition: all 0.2s linear;
+	//will-change: transform;
 
 	&.darkmode {
 		background-color: $gray-900;
 		color: $gray-100;
 
-		.card.video {
-
-			.card-img-back {
-				background-color: $gray-300;
-
-				svg {
-					box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.25);
-
+		#channels {
+			.channel {
+				.channel-control {
 					path {
-						fill: $white;
-		
-						&.fa-primary {
-							fill: $gray-800;
-						}
+						fill: $gray-100;
 					}
 				}
-		
 			}
+		}
+
+		.card.video {
+
+			// .card-img-back {
+			// 	// background-color: $gray-300;
+
+			// 	svg {
+			// 		// box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.25);
+
+			// 		path {
+			// 			fill: $white;
+		
+			// 			&.fa-primary {
+			// 				fill: $gray-800;
+			// 			}
+			// 		}
+			// 	}
+		
+			// }
 		
 			.card-body {
 				color: $gray-100;
