--- a/wp-content/themes/narrative/styles/dev.css
+++ b/wp-content/themes/narrative/styles/dev.css
@@ -9754,7 +9754,8 @@ html {
     height: 103px;
     padding: 10px;
     position: relative;
-    color: #495057; }
+    color: #495057;
+    transition: color 0.2s linear; }
     .card.video .card-body p {
       font-weight: bold; }
     .card.video .card-body span {
@@ -9800,6 +9801,7 @@ html {
     #channels .channel .channel-control svg {
       width: 10px; }
       #channels .channel .channel-control svg path {
+        transition: all 0.2s linear;
         fill: black; }
     #channels .channel .channel-control.prev {
       left: 0; }
@@ -10026,13 +10028,7 @@ body {
   body.darkmode {
     background-color: #212529;
     color: #f8f9fa; }
-    body.darkmode .card.video .card-img-back {
-      background-color: #dee2e6; }
-      body.darkmode .card.video .card-img-back svg {
-        box-shadow: 0px 0px 5px 3px rgba(0, 0, 0, 0.25); }
-        body.darkmode .card.video .card-img-back svg path {
-          fill: #fff; }
-          body.darkmode .card.video .card-img-back svg path.fa-primary {
-            fill: #343a40; }
+    body.darkmode #channels .channel .channel-control path {
+      fill: #f8f9fa; }
     body.darkmode .card.video .card-body {
       color: #f8f9fa; }
