refactor taxonomy code to use built in wp query

--- a/gulp/scss/powderkeg/02_elements/_buttons.scss
+++ b/gulp/scss/powderkeg/02_elements/_buttons.scss
@@ -1,3 +1,13 @@
+.btn-primary:not(:disabled):not(.disabled):active, 
+.btn-primary:not(:disabled):not(.disabled).active,
+.show > .btn-primary.dropdown-toggle {
+	background-color: $primary;
+	border-color: $primary;
+}
+
+button:focus {
+	outline: 0;
+}
 // .btn {
 // 	border: none;
 // 	border-radius: 0;
