--- a/gulp/scss/powderkeg/01_utilities/_pk-bootstrap-overrides.scss
+++ b/gulp/scss/powderkeg/01_utilities/_pk-bootstrap-overrides.scss
@@ -28,7 +28,7 @@ $green:   #4bbf73 !default;
 $teal:    #20c997 !default;
 $cyan:    #1f9bcf !default;
 
-$primary:       $gray-900 !default;
+$primary:       $blue !default;
 $secondary:     $white !default;
 $success:       $green !default;
 $info:          $cyan !default;
