Darkmode Tweaks, Bootstrap Override included, API setup

--- a/gulp/scss/powderkeg/01_utilities/_pk-bootstrap-overrides.scss
+++ b/gulp/scss/powderkeg/01_utilities/_pk-bootstrap-overrides.scss
@@ -14,7 +14,7 @@ $gray-500: #adb5bd !default;
 $gray-600: #919aa1 !default;
 $gray-700: #55595c !default;
 $gray-800: #343a40 !default;
-$gray-900: #1a1a1a !default;
+$gray-900: #181818 !default;
 $black:    #000 !default;
 
 $blue:    #007bff !default;
