--- a/gulp/scss/powderkeg/02_elements/_forms.scss
+++ b/gulp/scss/powderkeg/02_elements/_forms.scss
@@ -1,3 +1,17 @@
+.form-control {
+	transition: all 0.2s;
+}
+
+.input-group-text {
+	// background-color: white
+	transition: all 0.2s;
+
+	path {
+		transition: all 0.2s;
+	}
+}
+
+
 // /* Generic */
 // // ::-webkit-input-placeholder { font-style: italic; }
 // // :-moz-placeholder { font-style: italic; }
