--- a/gulp/scss/powderkeg/03_parts/_filters.scss
+++ b/gulp/scss/powderkeg/03_parts/_filters.scss
@@ -23,9 +23,9 @@
 	.input-group {
 		flex: 1;
 		margin: 0;
-		
+
 		.input-group-text {
-			background-color: white
+			// background-color: white
 		}
 
 		svg {
