Changed the default taxonmy from "genre" to "focus"

--- a/gulp/scss/powderkeg/03_parts/_genres.scss
+++ b/gulp/scss/powderkeg/03_parts/_genres.scss
@@ -1,8 +1,8 @@
-#genres {
+#focuses {
 	margin: 0px 0;
 	text-align: center;
 
-	.genre {
+	.focuses {
 		padding: 10px;
 		margin: 5px;
 		transition: background-color 0.1s linear;
