--- a/gulp/scss/powderkeg/03_parts/_channel.scss
+++ b/gulp/scss/powderkeg/03_parts/_channel.scss
@@ -7,6 +7,7 @@
 		border-bottom: 1px solid $gray-200;
 		padding-bottom: 30px;
 		margin-bottom: 30px;
+		transition: border-color 0.2s;
 
 		// .title-card {
 		// 	margin-bottom: 20px;
