Added functionality to custom slider!

--- a/gulp/scss/powderkeg/03_parts/_channel.scss
+++ b/gulp/scss/powderkeg/03_parts/_channel.scss
@@ -40,7 +40,8 @@
 		.channel-wrap {
 			display: flex;
 			//justify-content: space-between;
-			
+			transition: transform 0.2s;
+
 			.card {
 				margin-right: 20px;
 
