Custom Channel Slider 80% done!
Could still use some UI tweaks. Should be fully functional

--- a/gulp/scss/powderkeg/03_parts/_channel.scss
+++ b/gulp/scss/powderkeg/03_parts/_channel.scss
@@ -40,7 +40,7 @@
 		.channel-wrap {
 			display: flex;
 			//justify-content: space-between;
-			transition: transform 0.2s;
+			transition: transform 0.2s ease-out;
 
 			.card {
 				margin-right: 20px;
